--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "okane",
-  "version": "0.1.0",
-  "author": "Rodrigo Vargas",
+  "version": "0.1.2",
+  "author": {
+    "name": "Rodrigo Vargas"
+  },
   "scripts": {
     "test": "tsdx test"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "jest": "^29.7.0",
-    "tsdx": "^0.14.1"
-  }
+    "tsdx": "^0.14.1",
+    "typescript": "^5.8.3"
+  },
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts"
 }
